--- a/src/app/cardgame/cardgame.component.html
+++ b/src/app/cardgame/cardgame.component.html
@@ -1,19 +1,19 @@
 
 <!-- Formulaire de saisie Date -->
-<form [formGroup]="cardDateForm" (ngSubmit) = "onGuess(cardDateForm)">
+<form [formGroup]="cardDateForm" (ngSubmit) = "onGuess(cardDateForm.value)">
     <div id="cardDateInput">
-        <input id="cardDate" type="text" min="0150-01-01" max="2020-12-31"
-         placeholder='Entrez la date' formControlName="dateToGuess" [ngvalue] ="valDate">
+        <input id="cardDate" type="text"
+         placeholder='Entrez la date' formControlName="dateToGuess">
         <button class= "button" type="submit"> Deviner </button>
     </div>
 </form>
-
+<!-- [ngvalue] ="valDate" -->
 <div>
     <h2> Carte a deviner </h2>    
 </div>
 
 <!-- Carte à deviner -->
-<div class = "guessCardBlock">  
+<div class = "guessCardBlock" *ngIf = "cardToplay">  
 
     <h2> {{ cardToplay.name }} </h2>
     
