--- a/src/app/cardgame/cardgame.component.html
+++ b/src/app/cardgame/cardgame.component.html
@@ -27,7 +27,7 @@
 
     <h2> {{ guessedCard.name }} </h2>
 
-    <p> {{ guessedCard.date }} </p>
+    <h2> {{ guessedCard.date }} </h2>
 
     <img class = "guessedCardPicture" src =  {{guessedCard.imageUrl}} alt = "carte devinee">
 
