--- a/src/app/cardgame/cardgame.component.html
+++ b/src/app/cardgame/cardgame.component.html
@@ -7,12 +7,12 @@
         <button class= "button" type="submit"> Deviner </button>
     </div>
 </form>
-<!-- [ngvalue] ="valDate" -->
-<div>
-    <h2> Carte a deviner </h2>    
-</div>
 
 <!-- Carte à deviner -->
+<div>
+    <h2> Carte à deviner </h2>    
+</div>
+
 <div class = "guessCardBlock" *ngIf = "cardToplay">  
 
     <h2> {{ cardToplay.name }} </h2>
@@ -22,7 +22,12 @@
     <h3> {{ cardToplay.description }} </h3>
 </div>
 
+<br>
 <!-- Bloc de cartes devinées -->
+<div>
+    <h2> Carte(s) trouvées </h2>    
+</div>
+
 <div class = "guessedCardBlock" *ngFor = "let guessedCard of guessedCardList , let i =index">
 
     <h2> {{ guessedCard.name }} </h2>
