--- a/src/app/cardgame/cardgame.component.css
+++ b/src/app/cardgame/cardgame.component.css
@@ -9,9 +9,18 @@
     width : 320px;
     height: 400px;
     margin: 0 auto;
-    padding: 10px;
+    padding: 10px;    
+    margin-top: 12px;
 }
-    
+
+.guessedCardDiv {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 10px;
+    /* display: inline-block; */
+}
+
 .guessCardPicture, .guessedCardPicture {
     width : 200px;
     height: 200px;
@@ -24,4 +33,15 @@
 h2, h3 {
     font-family: 'Bree Serif', serif;
     text-align: center;
+}
+
+.error {
+    position: relative;
+    animation: shake .1s linear;
+    animation-iteration-count: 3;
+}
+
+@keyframes shake {
+    0% { left: -5px; }
+    100% { right: -5px; }
 }
